# KaTaLyzer

./: .directory  AUTHORS  CMakeLists.txt  CREATE_DEB  INSTALL  KaTaLyzer.kdev4  Makefile.am  Makefile.in  README  README.md  config.h.in  configure  configure.ac
.kdev4/: KaTaLyzer.kdev4
Client/: .gitignore  Katalyzer.sln
Client/Linux/: Linux.csproj  LinuxPlatform.cs  Program.cs  katalyzer_background_start.sh  katalyzer_start.sh
Client/Shared/: Shared.csproj
Client/Shared/Configuration/: ConfigurationManager.cs  NetworkAdapterConfiguration.cs  Settings.cs
Client/Shared/Core/: ExtensionMethods.cs  KaTaLyzerWorker.cs  StatisticsPersistedEventArgs.cs
Client/Shared/Core/Capturing/: NetworkAdapter.cs  NetworkAdapterStatistics.cs  StatisticsRecord.cs
Client/Shared/Core/Protocols/: ProtocolsLists.cs
Client/Shared/Core/Protocols/Custom/: CdpPacket.cs  FtpPacket.cs  GoogleQuic.cs  HttpPacket.cs  Https.cs  LogicalLayerControlPacket.cs  SipPacket.cs  SshPacket.cs
Client/Shared/Core/Protocols/Parsing/: IProtocolParser.cs  ProtocolParserWithPayloadPacket.cs
Client/Shared/Core/Protocols/Parsing/Parsers/: ArpParser.cs  CdpParser.cs  EthernetParser.cs  FtpParser.cs  GoogleQuicParser.cs  (+16 more)
Client/Shared/Logging/: KaTaLyzerLogger.cs  LogLevel.cs
Client/Shared/Repository/: HttpServerRepository.cs  LogsRepository.cs  StatisticsRepository.cs
Client/Shared/Repository/LogstashMessages/: LogMessage.cs  LogstashMessage.cs  StatisticsMessage.cs
Client/Shared/RunningModes/: BackgroundJob.cs  PlatformDependencies.cs
Client/Shared/RunningModes/Arguments/: ArgumentsResolver.cs  CommandLineOptions.cs
Client/Shared/RunningModes/ConsoleUi/: ConsoleUi.cs
Client/Shared/RunningModes/ConsoleUi/DialogTemplates/: ConsoleTemplateProvider.cs  DialogActionOption.cs  UserDialogResponse.cs
Client/Shared/RunningModes/ConsoleUi/Dialogs/: ConfigurationWizardDialogs.cs  MainMenuDialogs.cs
Client/Windows/: KaTaLyzerService.Designer.cs  KaTaLyzerWindowsService.Designer.cs  KaTaLyzerWindowsService.cs  Program.cs  Windows.csproj  WindowsPlatform.cs  packages.config
Client/Windows/Properties/: AssemblyInfo.cs
ElkDocker/: docker-compose.yml
ElkDocker/elk/: Dockerfile  logstash.conf
Installation/: KibanaSettings.json
Installation/Linux/: README.txt
Installation/Windows/: README.txt
SQL/: frontend.sql
backend/: .directory  Makefile  cdp.c  cdp.h  cronovanie.c  katalyzer  katalyzer.c  katalyzer.h  nflow_sflow.c  processing.c  processing.h  read_conf.c  read_conf.h  sip.h  snmpp.h  start_katalyzer  variables.c  variables.h  wait_function.c  wait_function.h
backend/files/: debug_config.conf  my_config.conf
backend/modules/: Makefile  README  buffer.c  buffer.h  capture.c  capture.h  pokus.c
backend/socket/: ksocket.c  ksocket.h
cmake/Modules/: FindMYSQL.cmake  FindPCAP.cmake
debian/: README.Debian  README.source  changelog  control  copyright  init.d  katalyzer.config  katalyzer.install  katalyzer.postinst  katalyzer.postrm  katalyzer.templates
frontend/: cdp.php  config_edit.php  graph.php  index.php  ipinfo.php  load.php  managment.php  sip.php  user.php
frontend/ajax/: global.js
frontend/configs/: .measuring-exampel.conf  my_config.conf
frontend/inc/: class_config.php  class_db.php  class_edit_conf.php  class_input.php  class_ipinfo.php  class_loggin.php  class_sip_svg.php  class_svg.php  class_user.php  core.php
frontend/themes/: style.css
frontend/themes/black/: style.css
frontend/themes/classic/: colors.php
frontend/themes/classic/jquery-ui/: jquery-ui-1.7.2.custom.css
src/backend/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  cdp.c  cronovanie.c  cronovanie.h  errdef.h  index.html.1  katalyzer.c  katalyzer.h  katalyzer_inst.sh  katalyzer_pcap  ksocket.c  ksocket.h  nflow_sflow.h  processing.c  processing.h  read_conf.c  sha1.c  sha1.h  sip.c  snmpp.c  variables.c  variables.h  wait_function.c  wait_function.h
src/backend/files/: .config.conf.un~  config.conf  d_config.conf  debug_config.conf  katalyzer  my_config.conf
src/backend/modules/: Makefile_old  buffer.c
src/backend/protos/: eth.c  eth.h  ip.c  ip.h  tcp.c  tcp.h  udp.c  udp.h
src/backend/socket/: CMakeLists.txt  Makefile_old  ksocket.h  pokus.c
src/frontend/: config_edit.php  index.php  katalyzer-measuring  user.php
src/frontend/configs/: config.conf
src/frontend/inc/: class_config.php  class_db.php  class_edit_conf.php  class_loggin.php  class_port_names.php
src/frontend/themes/black/: colors.php  style.css
src/frontend/themes/black/jquery-ui/: jquery-ui-1.7.2.custom.css
src/frontend/themes/classic/: style.css
